[gd_scene load_steps=12 format=3 uid="uid://cx4hmkxof37e7"]

[ext_resource type="Script" path="res://scripts/user_interface/uiStartMenu.gd" id="1_1evch"]
[ext_resource type="Theme" uid="uid://dlrtokrr0ap1h" path="res://design/BorderlessButton.tres" id="1_6f5xk"]
[ext_resource type="PackedScene" uid="uid://b0f85fb7fa5hj" path="res://scenes/user_interface/CustomButton.tscn" id="1_102o8"]
[ext_resource type="AudioStream" uid="uid://q4qfaj7w4l1n" path="res://audio/music/453396__oymaldonado__little-latin-jazz-intro.ogg" id="4_nvg44"]

[sub_resource type="Animation" id="Animation_d0dge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-144, -88)]
}

[sub_resource type="Animation" id="Animation_movia"]
resource_name = "Show"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-104, -88), Vector2(-176, -88), Vector2(-104, -88)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bnbw2"]
_data = {
"RESET": SubResource("Animation_d0dge"),
"Show": SubResource("Animation_movia")
}

[sub_resource type="Animation" id="Animation_1g28q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionMatte:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionMatte:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-336, -192)]
}

[sub_resource type="Animation" id="Animation_b8f10"]
resource_name = "Slide_In"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionMatte:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 384), Vector2(688, 384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionMatte:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-336, -192)]
}

[sub_resource type="Animation" id="Animation_dqlyd"]
resource_name = "Slide_Out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionMatte:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(688, 384), Vector2(56, 384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionMatte:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-336, -192), Vector2(296, -192)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h17ur"]
_data = {
"RESET": SubResource("Animation_1g28q"),
"Slide_In": SubResource("Animation_b8f10"),
"Slide_Out": SubResource("Animation_dqlyd")
}

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_1evch")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -304.0
offset_top = -200.0
offset_right = 344.0
offset_bottom = 240.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -48.0
offset_right = 48.0
offset_bottom = 40.0

[node name="NewGame" parent="VBoxContainer" instance=ExtResource("1_102o8")]
layout_mode = 2
theme = ExtResource("1_6f5xk")
text = "NEW GAME"
alignment = 1

[node name="LoadGame" parent="VBoxContainer" instance=ExtResource("1_102o8")]
layout_mode = 2
theme = ExtResource("1_6f5xk")
text = "LOAD"
alignment = 1

[node name="Settings" parent="VBoxContainer" instance=ExtResource("1_102o8")]
layout_mode = 2
theme = ExtResource("1_6f5xk")
text = "SETTINGS"
alignment = 1

[node name="Quit" parent="VBoxContainer" instance=ExtResource("1_102o8")]
layout_mode = 2
theme = ExtResource("1_6f5xk")
text = "Q UIT"
alignment = 1

[node name="Title" type="Label" parent="."]
offset_left = -144.0
offset_top = -88.0
offset_right = 144.0
offset_bottom = -65.0
theme_override_font_sizes/font_size = 16
text = "ALL THAT JAZZ"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nvg44")
volume_db = -16.0
autoplay = true
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bnbw2")
}

[node name="Label" type="Label" parent="."]
offset_left = -280.0
offset_top = 144.0
offset_right = -152.0
offset_bottom = 157.0
text = "A game by yugmar! "

[node name="TransitionMatte" type="ColorRect" parent="."]
z_index = 999
offset_left = -336.0
offset_top = -192.0
offset_right = -296.0
offset_bottom = 192.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionMatte"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_h17ur")
}

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
